# Mechanism2025

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  Model.cpp  Model.hpp  README.md  Texture.hpp  TextureMaker.hpp
configs/: config.json
docs/: README.md
include/Mechanism2025/: JsonLoader.hpp  Model.hpp  Node.hpp  Texture.hpp  TextureMaker.hpp
src/: Model.cpp
